--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,7 +147,9 @@ target_sources(
           src/ui/filter-replace-utils.cpp
           src/translation/translation-language-utils.cpp
           src/ui/filter-replace-dialog.cpp
-          src/aws-transcribe/aws-transcribe.cpp)
+          src/aws-transcribe/websocket-client.cpp
+          src/aws-transcribe/aws-transcribe.cpp
+          src/aws-transcribe/presigned-url.cpp)
 
 set_target_properties_plugin(${CMAKE_PROJECT_NAME} PROPERTIES OUTPUT_NAME ${_name})
 
